@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-21T01:00:55Z",
+  "timestamp" : "2022-06-21T16:18:50Z",
   "count_outdated" : 347,
   "uniques_outdated" : 187,
   "count" : 376,
-  "uniques" : 203,
+  "uniques" : 204,
   "clones" : [
     {
       "timestamp": "2022-06-07T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-20T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
